Add initial scaffolding

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 </head>
 <body>
   <div id="root"></div>
-  <script src="./src/index.tsx"></script>
+  <div class="wrapper flex">
+    <div class="two-thirds flex-column">
+      <div id="video-player"  class="fill-parent-width"> </div>
+      <div id="search-box" class="fill-parent-width"> </div>
+    </div>
+    <div class="one-third flex-column">
+      <div id="sound-events" class="fill-parent-width"> </div>
+    </div>
+  </div>
+
+
+  <script src="./src/index.tsx" type="module"></script>
 </body>
 </html>
