--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="root"></div>
-  <div class="wrapper flex">
+  <!-- <div class="wrapper flex">
     <div class="two-thirds flex-column">
       <div id="video-player"  class="fill-parent-width"> </div>
       <div id="search-box" class="fill-parent-width"> </div>
@@ -14,9 +14,10 @@
     <div class="one-third flex-column">
       <div id="sound-events" class="fill-parent-width"> </div>
     </div>
-  </div>
+  </div> -->
 
 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <script src="./src/index.tsx" type="module"></script>
 </body>
 </html>
