--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!doctype html>
-<html>
-<head><link rel="stylesheet" href="/index.caa67093.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-  <div id="root"></div>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-  <script src="/index.b4af9c3f.js"></script>
-</body>
-</html>
+<!doctype html><html><head><link rel="stylesheet" href="index.c688840f.css"><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body> <div id="root"></div> <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"> <script src="index.fa405d30.js" type="module"></script><script src="index.9b24f48a.js" nomodule=""></script> </body></html>
