--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!doctype html><html><head><link rel="stylesheet" href="index.3645ada0.css"><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body> <div id="root"></div> <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"> <script src="index.36d896e1.js" type="module"></script><script src="index.9327fd5d.js" nomodule=""></script> </body></html>
+<!doctype html>
+<html>
+<head><link rel="stylesheet" href="/index.ce1d6491.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+  <div id="root"></div>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <script src="/index.2d3ace14.js" defer=""></script>
+</body>
+</html>
